# dce

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  clippy.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  labels.yml  release.yml
contracts_cli/: Cargo.toml  README.md
contracts_cli/src/: main.rs  output.rs
contracts_cli/src/commands/: check.rs  init.rs  validate.rs
contracts_cli/tests/: cli_tests.rs
contracts_cli/tests/fixtures/: parquet_contract.yml  simple_contract.yml
contracts_core/: Cargo.toml
contracts_core/src/: builder.rs  contract.rs  lib.rs  validator.rs
contracts_iceberg/: Cargo.toml
contracts_iceberg/src/: catalog.rs  config.rs  converter.rs  lib.rs  schema.rs  validator.rs
contracts_iceberg/tests/: integration_tests.rs
contracts_parser/: Cargo.toml
contracts_parser/src/: lib.rs
contracts_sdk/: Cargo.toml
contracts_validator/: Cargo.toml
contracts_validator/src/: custom.rs  datafusion_engine.rs  engine.rs  error.rs  lib.rs  ml.rs  quality.rs  schema.rs
contracts_validator/tests/: null_handling_test.rs  user_events_validation_test.rs
crates/contracts-python/: Cargo.toml  pyproject.toml
crates/contracts-python/src/: lib.rs
crates/contracts_cli/: Cargo.toml
crates/contracts_cli/src/: main.rs
crates/contracts_cli/src/commands/: check.rs  init.rs  mod.rs  validate.rs
crates/contracts_cli/tests/: cli_tests.rs
crates/contracts_cli/tests/fixtures/: contract.toml  contract_with_quality.yml  invalid_contract.yml
crates/contracts_core/: Cargo.toml
crates/contracts_core/src/: builder.rs  contract.rs  datatype.rs  error.rs  lib.rs
crates/contracts_iceberg/: Cargo.toml  README.md
crates/contracts_iceberg/examples/: glue_catalog.rs  hms_catalog.rs  rest_catalog.rs
crates/contracts_iceberg/src/: catalog.rs  converter.rs  lib.rs  schema.rs  validator.rs
crates/contracts_parser/: Cargo.toml
crates/contracts_parser/src/: lib.rs
crates/contracts_validator/: Cargo.toml
crates/contracts_validator/src/: constraints.rs  custom.rs  datafusion_engine.rs  dataset.rs  engine.rs  file_reader.rs  lib.rs  ml.rs  schema.rs
crates/contracts_validator/tests/: file_format_validation_test.rs  native_context_validation_test.rs  null_handling_test.rs  user_events_validation_test.rs
docs/: ARCHITECTURE.md
docs/architecture/: ADR-001-workspace-structure.md
examples/contracts/: user_event.yml  user_events.yml
