[workspace]
resolver = "2"
members = [
    "contracts_core",
    "contracts_parser",
    "contracts_validator",
    "contracts_iceberg",
    "contracts_cli",
    "contracts_sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Data Contracts Engine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dce"
homepage = "https://github.com/yourusername/dce"
keywords = ["data-contracts", "data-engineering", "iceberg", "validation"]
categories = ["data-structures", "development-tools"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation & Regex
regex = "1.5"
validator = "0.18"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# Async runtime (for future use)
tokio = { version = "1.35", features = ["full"] }

# Iceberg support
iceberg = "0.7.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
