[workspace]
resolver = "2"
members = [
    "contracts_core",
    "contracts_parser",
    "contracts_validator",
    "contracts_iceberg",
    "contracts_cli",
    "contracts_sdk",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Data Contracts Engine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreaBozzo/dce"
homepage = "https://github.com/AndreaBozzo/dce"
keywords = ["data-contracts", "data-engineering", "iceberg", "validation"]
categories = ["data-structures", "development-tools"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation & Regex
regex = "1.11"
validator = "0.20"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"

# Async runtime (for future use)
tokio = { version = "1.35", features = ["full"] }

# Iceberg support
iceberg = "0.7"

# Arrow (for Iceberg data processing)
arrow-array = "55.2.0"
arrow-schema = "55.2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256  # Maximize parallelism for faster dev builds
incremental = true   # Enable incremental compilation

# Reduce debug info for dependencies to save memory
[profile.dev.package."*"]
opt-level = 0
debug = false  # Only line tables, not full debug info

[profile.test]
opt-level = 0
debug = true
codegen-units = 256  # Maximize parallelism for test builds
incremental = true

# Reduce debug info for dependencies during tests
[profile.test.package."*"]
opt-level = 0
debug = false
