[workspace]
resolver = "2"
members = [
    "crates/contracts_core",
    "crates/contracts_parser",
    "crates/contracts_validator",
    "crates/contracts_iceberg",
    "crates/contracts_cli",
    "crates/contracts_sdk",
    "crates/contracts-python",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Andrea Bozzo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreaBozzo/dce"
homepage = "https://github.com/AndreaBozzo/dce"
keywords = ["data-contracts", "data-engineering", "iceberg", "validation"]
categories = ["data-structures", "development-tools"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
toml = "0.9.8"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Date/Time
chrono = { version = "0.4.44", features = ["serde"] }

# Validation & Regex
regex = "1.12.3"
validator = "0.20"

# CLI
clap = { version = "4.6.0", features = ["derive", "cargo"] }
colored = "3.1.1"

# Async runtime (for future use)
tokio = { version = "1.50", features = ["full"] }

# DataFusion (SQL-based validation engine)
datafusion = "52.3.0"

# Iceberg support
iceberg = "0.8.0"

# Arrow (for Iceberg data processing)
arrow-array = "57.3.0"
arrow-schema = "57.3.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Testing
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256  # Maximize parallelism for faster dev builds
incremental = true   # Enable incremental compilation

# Reduce debug info for dependencies to save memory
[profile.dev.package."*"]
opt-level = 0
debug = false  # Only line tables, not full debug info

[profile.test]
opt-level = 0
debug = true
codegen-units = 256  # Maximize parallelism for test builds
incremental = true

# Reduce debug info for dependencies during tests
[profile.test.package."*"]
opt-level = 0
debug = false
