[package]
name = "contracts_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"

[dev-dependencies]
iceberg = "0.7.0"
pretty_assertions = "1.4"