[package]
name = "contracts_iceberg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Apache Iceberg integration for Data Contracts"

[dependencies]
contracts_core = { path = "../contracts_core" }
contracts_validator = { path = "../contracts_validator" }
iceberg = { workspace = true }
iceberg-catalog-rest = "0.7"
iceberg-catalog-glue = "0.7"
iceberg-catalog-hms = "0.7"
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
