[package]
name = "contracts_iceberg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Apache Iceberg integration for Data Contracts"

[features]
default = ["rest-catalog"]
rest-catalog = ["dep:iceberg-catalog-rest"]
glue-catalog = ["dep:iceberg-catalog-glue"]
hms-catalog = ["dep:iceberg-catalog-hms"]
all-catalogs = ["rest-catalog", "glue-catalog", "hms-catalog"]

[dependencies]
contracts_core = { path = "../contracts_core" }
contracts_validator = { path = "../contracts_validator" }
iceberg = { workspace = true }
iceberg-catalog-rest = { version = "0.7", optional = true }
iceberg-catalog-glue = { version = "0.7", optional = true }
iceberg-catalog-hms = { version = "0.7", optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
