[package]
name = "contracts_parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parser for Data Contracts DSL (YAML/TOML formats)"

[dependencies]
contracts_core = { path = "../contracts_core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
