[package]
name = "contracts_validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Validation engine for Data Contracts"

[dependencies]
contracts_core = { path = "../contracts_core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
