[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dce"
requires-python = ">=3.9"
description = "Python bindings for the Data Contracts Engine"
dependencies = [
    "pyarrow>=23.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dce"
