[package]
name = "contracts_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core data structures and types for Data Contracts Engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
iceberg = { workspace = true }
pretty_assertions = { workspace = true }